[project]
name = "BN-DATA-REPORTS"
version = "0.1.0"
description = ""
authors = ["Vikram Gupta <vikram.gupta205@gmail.com>"]
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.164.0",
    "google-auth>=2.38.0",
    "gspread>=6.2.0",
    "gspread-dataframe>=4.0.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.39",
    "streamlit>=1.43.2",
    "pymysql>=1.1.0",
    "pywhatkit==5.4",
]
